--- a/assets/about.css
+++ b/assets/about.css
@@ -28,14 +28,7 @@ body {
   background: rgba(0, 0, 0, 0.55);
 }
 
-.header-container {
-  max-width: 1500px;
-  margin: auto;
-  padding: 14px 32px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
+
 
 .logo-wrap {
   display: flex;
@@ -79,6 +72,7 @@ body {
   border: none;
   padding: 8px 18px;
   font-size: 13px;
-  font-weight: 500;
+  font-weight: 700;
   cursor: pointer;
+  font-family: 'Roboto';
 }
