--- a/style.css
+++ b/style.css
@@ -972,7 +972,7 @@ button{
 .join-content-box {
   background: #fff;
   border-radius: 8px;
-  box-shadow: 0 2px 16px rgba(0,0,0,0.06);
+
   max-width: 800px;
   width: 100%;
   margin-top: 0;
@@ -991,6 +991,7 @@ button{
   border-radius: 8px;
   object-fit: cover;
   box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+  height:100%;
 }
 .join-form-box {
   flex: 1;
