--- a/style.css
+++ b/style.css
@@ -971,8 +971,6 @@ button{
 }
 .join-content-box {
   background: #fff;
-  border-radius: 8px;
-
   max-width: 800px;
   width: 100%;
   margin-top: 0;
@@ -991,7 +989,6 @@ button{
   border-radius: 8px;
   object-fit: cover;
   box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-  height:100%;
 }
 .join-form-box {
   flex: 1;
@@ -2016,6 +2013,16 @@ body {
   width: 100vw;
   z-index: 20;
   background: transparent;
+  opacity: 1;
+  height: 53px;
+}
+ .header-two {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  z-index: 20;
+  background: #3C3B3B;
   opacity: 1;
   height: 53px;
 }
